--- a/jumia.ipynb
+++ b/jumia.ipynb
@@ -9,70 +9,7 @@
     "from selenium import webdriver\n",
     "from time import sleep\n",
     "import re\n",
-    "import pandas as pd\n",
-    "# from selenium.webdriver.firefox.options import Options\n",
-    "# from config import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# try:\n",
-    "#     current_path = os.path.dirname(os.path.abspath(__file__))\n",
-    "# except:\n",
-    "#     current_path = '.'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\ndef init_driver(gecko_driver=\\'\\', user_agent=\\'\\', load_images=True, is_headless=False):\\n    firefox_profile = webdriver.FirefoxProfile()\\n    \\n    firefox_profile.set_preference(\\'dom.ipc.plugins.enabled.libflashplayer.so\\', False)\\n    firefox_profile.set_preference(\"media.volume_scale\", \"0.0\")\\n    firefox_profile.set_preference(\"dom.webnotifications.enabled\", False)\\n    if user_agent != \\'\\':\\n        firefox_profile.set_preference(\"general.useragent.override\", user_agent)\\n    if not load_images:\\n        firefox_profile.set_preference(\\'permissions.default.image\\', 2)\\n\\n    options = Options()\\n    options.headless = is_headless\\n    \\n    driver = webdriver.Firefox(options=options,\\n                               executable_path=f\\'{current_path}/{gecko_driver}\\',\\n                               firefox_profile=firefox_profile)\\n    \\n    return driver\\n'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "def init_driver(gecko_driver='', user_agent='', load_images=True, is_headless=False):\n",
-    "    firefox_profile = webdriver.FirefoxProfile()\n",
-    "    \n",
-    "    firefox_profile.set_preference('dom.ipc.plugins.enabled.libflashplayer.so', False)\n",
-    "    firefox_profile.set_preference(\"media.volume_scale\", \"0.0\")\n",
-    "    firefox_profile.set_preference(\"dom.webnotifications.enabled\", False)\n",
-    "    if user_agent != '':\n",
-    "        firefox_profile.set_preference(\"general.useragent.override\", user_agent)\n",
-    "    if not load_images:\n",
-    "        firefox_profile.set_preference('permissions.default.image', 2)\n",
-    "\n",
-    "    options = Options()\n",
-    "    options.headless = is_headless\n",
-    "    \n",
-    "    driver = webdriver.Firefox(options=options,\n",
-    "                               executable_path=f'{current_path}/{gecko_driver}',\n",
-    "                               firefox_profile=firefox_profile)\n",
-    "    \n",
-    "    return driver\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# driver = init_driver(gecko_driver, user_agent=user_agent)"
+    "import pandas as pd"
    ]
   },
   {
@@ -115,13 +52,6 @@
     "last_page = driver.find_element_by_css_selector('.pg-w a:last-of-type').get_attribute('href')\n",
     "last_page_num = int(re.sub(\"[^0-9]\", \"\", last_page))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 242,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
